--- a/index.html
+++ b/index.html
@@ -1,15 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Fundamentos JavaScript</h1>
-
-    <script src="index.js">
-    </script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Somos una empresa dedicada a la logística farmacéutica, 20 años de experiencia nos avalan">
+    <meta name="keywords" content="drogueria, origim, farmacia, medicamentos, distribucion, logistica, noroeste argentino, NOA">
+    <title>Drogueria Origim :: Logistica farmaceutica</title>
+    <link rel="stylesheet" href="css/estilos.css" />
+    <!-- GOOGLE FONTS   -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <!-- BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap"  rel="stylesheet">
+    <!-- ANIMATE LIBRARY -->
+    <link rel="shortcut icon" href="images/icon.png" type="image/png">
+  <body>
+    <header class="col-12 d-flex row-nowrap align-items-center position-sticky">
+      <div  class="container d-flex row-nowrap align-items-center">
+        <div>
+          <img src="images/logo04.png" alt="Logo Origim">
+        </div>        
+        <div>
+          <h1 class="d-none d-lg-block animate__animated animate__slideInLeft">DROGUERIA ORIGIM</h1>
+        </div>
+      </div>
+      <nav class="col-6 navbar navbar-expand-lg navbar-light navHeader">
+        <div class="container-fluid d-flex justify-content-end pe-5">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse bg-inherit" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="" href="index.html">INICIO</a>
+              <a class="" href="pages/quienessomos.html">QUIENES SOMOS</a>
+              <a class="" href="pages/nuestrared.html">NUESTRA RED</a>
+              <a class="" href="pages/partners.html">PARTNERS</a>
+              <a class="" href="pages/contacto.html">CONTACTO</a>
+              <a class="" href="pages/calculadora.html">CALCULADORA</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main class="main__index">
+      <section class="" >
+        <div>
+          <img src="images/logo01.png" alt="Logo Origim">
+        </div>
+        <div>        
+          <div>                   
+            <h2>
+              logistica  farmaceutica
+            </h2>
+          </div>
+          <div>
+            <p>
+              "La salud es la mayor posesión. La alegría es el mayor tesoro. La confianza es el mayor amigo - Lao Tzu"
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="main__noticias">
+        <img src="images/drogueria2.jpg" alt="Nuevos Productos">
+        <article>
+          <h3>Nuevos Productos</h3>
+          <p>
+            Estamos ampliando nuestra oferta de productos para atender las necesidades de nuestros clientes, proximamente toda la linea de ANALGESIA y ANTIBIOTICOS estara disponible en nuestra seccion CLIENTES.
+          </p>
+        </article>
+      </section>
+      <section class="main__slider">
+        <div class="container col-12 d-flex flex-column">
+          <h2>RESPONSABILIDAD, AGILIDAD, CONFIANZA</h2>
+          <div class="main__carousel">
+            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="images/carousel/deposito-1.webp" class="d-block w-100 img-fluid" alt="deposito-1">
+                </div>
+                <div class="carousel-item">
+                  <img src="images/carousel/deposito-2.jpeg" class="d-block w-100" alt="deposito-2">
+                </div>S
+                <div class="carousel-item">
+                  <img src="images/carousel/deposito-3.webp" class="d-block w-100" alt="deposito-3">
+                </div>
+                <div class="carousel-item">
+                  <img src="images/carousel/personal-1.jpeg" class="d-block w-100" alt="personal-1">
+                </div>
+                <div class="carousel-item">
+                  <img src="images/carousel/personal-2.jpeg" class="d-block w-100" alt="personal-2">
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+        <div class="fade__footer">
+          <img src="images/logo05.png" alt="Logo Footer"/>
+        </div>
+        <div >
+          <nav>
+            <ul class="">
+              <li><a href="index.html">Inicio</a></li>
+              <li><a href="pages/quienessomos.html">Quienes Somos</a></li>
+              <li><a href="pages/nuestrared.html">Nuestra Red</a></li>
+              <li><a href="pages/partners.html">Partners</a></li>
+              <li><a href="pages/contacto.html">Contacto</a></li>
+              <li><a href="pages/calculadora.html">Calculadora</a></li>
+            </ul>
+          </nav>         
+        </div>
+        <div>
+          <ul class="">
+            <li><a href="mailto:origim@mail.com.ar">origim@mail.com.ar</a></li>
+            <li><a href="https://wa.me/543834954050" class="whatsapp" target="_BLANK">+54 9 1234567890</a></li>
+          </ul>
+        </div>  
+        <div class="redes__footer">
+          <a href=""><img src="images/facebook.png" alt="facebook" class=""/></a>
+          <a href=""><img src="images/instagram.png" alt="instagram"class=""/></a>
+          <a href=""><img src="images/linkedIn.png" alt="linkedIn"class=""/></a>
+        </div>
+        <div class="">
+          <img src="images/afip.png" alt="qr afip"/>
+        </div>    
+    </footer>
+    <!-- BOOTSTRAP JAVASCRIPT -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- JAVASCRIPT-->
+    <script src="/js/index.js"></script> 
+  </body>
 </html>
