--- a/pages/calculadora.html
+++ b/pages/calculadora.html
@@ -41,36 +41,139 @@
               <a class="" href="contacto.html">CONTACTO</a>
               <a class="" href="calculadora.html">CALCULADORA</a>
             </div>
+            <div class="container-fluid">
+              <!-- Button trigger modal -->
+              <button id="toggleMyModal" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" >
+                  CARGA REGISTRADA <i class="bi bi-bag-check-fill"></i>
+              </button>  
+            </div>
           </div>
         </div>
       </nav>
     </header>
-    <main>
-      <section class="section__partners animate__animated animate__flipInX ">
-        <div class="section__partners-card">
-          <img src="../images/ramallo.png" alt="Laboratorios Ramallo">
-          <div>
-            <a href="https://www.facebook.com/pages/Laboratorios-Ramallo/111105153923828" target="_BLANK"><img src="../images/facebook.png" alt="facebook ramallo"/></a>
-            <a href=""><img src="../images/instagram.png" alt="instagram ramallo"/></a>
-            <a href=""><img src="../images/linkedIn.png" alt="linkedIn ramallo"/></a>
-          </div>                            
-        </div>
-        <div class="section__partners-card">
-          <img src="../images/hlb-pharma-logo-color.png" alt="HLB Pharma">
-          <div>
-            <a href=""><img src="../images/facebook.png" alt="facebook hlb"/></a>
-            <a href=""><img src="../images/instagram.png" alt="instagram hlb"/></a>
-            <a href=""><img src="../images/linkedIn.png" alt="linkedIn hlb"/></a>
+    <main class="main__contact d-flex align-items-center flex-column">
+      <section class="main__form col-8 m-5 p-5 d-flex justify-content-center align-items-center animate__animated animate__fadeIn">
+        <div class="col-xl-12 col-md-10" >
+          <form class="row g-3">
+            <div class="col-md-6">
+              <label for="inputNombreEmpleado" class="form-label">Nombre</label>
+              <input type="text" class="form-control" id="inputNombreEmpleado" placeholder="Nombre Completo">
+            </div>
+            <div class="col-md-6">
+              <label for="inputDate" class="form-label">Fecha</label>
+              <input type="date" class="form-control" id="inputDate">
+            </div>
+            <div class="col-md-6">
+              <label for="ciudadOrigen" class="form-label">ORIGEN</label>
+              <select id="ciudadOrigen" class="form-select">
+                <option selected>Choose...</option>
+                <option>Catamarca</option>
+                <option>Cordoba</option>
+                <option>Tucuman</option>
+                <option>La Rioja</option>
+                <option>Santiago del Estero</option>
+                <option>Salta</option>
+                <option>Jujuy</option>
+                <option>San Juan</option>
+              </select>
+            </div>
+            <div class="col-md-6">
+              <label for="ciudadDestino" class="form-label">DESTINO</label>
+              <select id="ciudadDestino" class="form-select">
+                <option selected>Choose...</option>
+                <option>Catamarca</option>
+                <option>Cordoba</option>
+                <option>Tucuman</option>
+                <option>La Rioja</option>
+                <option>Santiago del Estero</option>
+                <option>Salta</option>
+                <option>Jujuy</option>
+                <option>San Juan</option>
+              </select>
+            </div>
+            <div class="col-md-6">
+              <label for="inputDistancia" class="form-label">DISTANCIA RECORRIDA</label>
+              <input type="number" class="form-control" id="inputDistancia" placeholder="DISTANCIA RECORRIDA">
+            </div>
+            <div class="col-md-6">
+              <label for="movilAfectado" class="form-label">MOVIL</label>
+              <select id="movilAfectado" class="form-select">
+                <option selected>Choose...</option>
+                <option>IVECO</option>
+                <option>MASTER</option>
+              </select>
+            </div>
+            <div class="col-12">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="gridCheck" value="yes" onchange="">
+                <label class="form-check-label" for="gridCheck">
+                  CERTIFICO QUE ESTOS DATOS SON CORRECTOS
+                </label>
+              </div>
+            </div>
+            <div class="col-2 d-flex flex-row gap-5">
+              <div class="">
+                <button type="reset" class="btn btn-primary">LIMPIAR</button>
+              </div>
+              <div class="col-12">
+                <button type="submit" class="btn btn-primary" onclick="validaCheckbox();registrarViaje(); ">ENVIAR</button>
+              </div>
+            </div>             
+          </form>
+        </div>            
+      </section>
+      <section>
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Carrito</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <div class="container">
+                      <table class="table">
+                          <thead>
+                              <tr>
+                              <th scope="col">ID</th>
+                              <th scope="col">Nombre</th>
+                              <th scope="col">Cantidad</th>
+                              <th scope="col">Presentacion</th>
+                              <th scope="col">Total Cajas</th>
+                              <th></th>
+                              </tr>
+                          </thead>
+                          <tbody id="items"></tbody>
+                          <tfoot>
+                              <tr id="footer">
+                              <th scope="row" colspan="6">Carrito vacío - comience a comprar!</th>
+                              </tr>
+                          </tfoot>
+                          </table>
+                      <div class="row" id="cards"></div>
+                  </div>                  
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                  <button type="button" class="btn btn-primary">Terminar compra</button>
+                </div>
+            </div>
           </div>
         </div>
-        <div  class="section__partners-card">
-          <img src="../images/northia.png" alt="Northia">
-          <div>
-            <a href=""><img src="../images/facebook.png" alt="facebook northia"/></a>
-            <a href=""><img src="../images/instagram.png" alt="instagram northia"/></a>
-            <a href=""><img src="../images/linkedIn.png" alt="linkedIn northia"/></a>
-          </div>
-        </div>
+      </section>
+      <section class="d-flex justify-content-center mt-5">
+        <article class="container">
+            <div id="contenedor-productos" class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="card m-3 p-3">
+                    <img src="../images/cards/solucionDextrosa500ml.jpg" class="card-img-top" alt="Brownie">
+                    <div class="card-body">
+                        <h5>Sol500</h5>
+                        <p>15u</p>
+                        <button class="btn btn-success">AGREGAR</button>
+                    </div>
+                </div>
+            </div>
+        </article>
       </section>
     </main>
       <footer>
@@ -103,9 +206,10 @@
         <div class="">
           <img src="../images/afip.png" alt="qr afip"/>
         </div>    
-    </footer>
+      </footer>
     <!-- BOOTSTRAP JAVASCRIPT -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="/js/calculadora.js"></script>
+    <script src="../js/calculadora.js"></script>
+    <script defer src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   </body>
 </html>
